# shop-managment

./: Cargo.toml  LICENSE  README.md  index.html  play_with_data.rs  styles.css
src/: lib.rs  main.rs  play_with_data.rs
src/static/: script.js  styles.css
static/: index.html  script.js  styles.css
