[package]
name = "Shop"
version = "0.1.0"
edition = "2024"
[[bin]]
name = "shop-cli"
path = "src/play_with_data.rs"
[dependencies]
axum = { version = "0.7", features = ["json","multipart"] }
uuid = { version = "1", features = ["v4"] }
bincode = "1.3.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde_json = "1.0.149"
